# ndray

./: .gitignore  Makefile  Notes.txt  Raytracer.cabal  Readme.md  ndray.cabal  stack.yaml
Raytracer/: Args.hs  Main.hs  Prelude.hs  Render.hs
Raytracer/Objects/: Attributes.hs  Object.hs  Predefined.hs  Primitive.hs
Raytracer/Parsers/: WaveFront.hs
Raytracer/Scene/: Interpreter.hs  Scene.hs
Raytracer/Space/: KDTree.hs  Tensor.hs
Raytracer/Surface/: Mapping.hs  Material.hs  Texture.hs
Raytracer/Utils/: Array.hs  Display.hs  File.hs  Math.hs
Raytracer/World/: AABB.hs  Color.hs  Environment.hs  Intersect.hs  Lights.hs
Raytracer/World/Texture/: Base.hs  Image.hs
Scenes/: test.lua
Scenes/Demo/: StillLife1.lua  Teapot1.lua
Scenes/Lib/Demo/: Demo.hs  Mesh.hs  Simple.hs
Scenes/Lib/Lua/Include/: Colors.lua  Prelude.lua
Scenes/Simple/: 1PointLight.lua  2PointLights.lua  Simple1.lua  Simple2.lua
Textures/Marble/: 001  002  003  004  005  006  007  008  009  010
Textures/Misc/: 001  002  003
Textures/Planets/: earth01  jupiter01  moon01  stars01
Textures/Sky/: 001  002  003  004  005  006
Textures/SkyBox/01/: back  bottom  front  left  right  top
app/: Main.hs
src/Raytracer/: Args.hs  Const.hs  Prelude.hs  Render.hs
src/Raytracer/Objects/: Attributes.hs  Object.hs  Predefined.hs  Primitive.hs
src/Raytracer/Parsers/: WaveFront.hs
src/Raytracer/Scene/: Scene.hs
src/Raytracer/Scenes/: Demo.hs
src/Raytracer/Space/: KDTree.hs  Tensor.hs
src/Raytracer/Surface/: Mapping.hs  Material.hs  Texture.hs
src/Raytracer/Surface/Texture/: Basic.hs  Image.hs  Noise.hs
src/Raytracer/Utils/: Data.hs  Math.hs
src/Raytracer/Utils/Math/: Matrix.hs
src/Raytracer/World/: AABB.hs  Camera.hs  Color.hs  Const.hs  Environment.hs  Intersect.hs  Lights.hs
