name:                Raytracer
version:             0.0.0.1
author:              Mike Woods
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

executable Raytracer
  main-is: Raytracer/Main.hs
  ghc-options: -threaded -O2 --make -Wall -fwarn-tabs -fno-warn-type-defaults
  build-depends:
    base
    ,mtl
    ,repa
    ,repa-io
    ,array
    ,binary
    ,options
    ,directory
    ,HUnit
    ,lens
    ,JuicyPixels
    ,bed-and-breakfast
    ,parsec
    ,hslua
    ,luautils
